# wyah

./: README.md  dune-project  wyah.opam
core/: dune  prelude.ml  syntax.ml  template_instantiate.ml  test_ti.ml
core/frontend/: ast.ml  dune  lexer.mll  menhir_parser.mly  parser.ml  test_parse.ml
core/g_machine/: compile.ml  debug_machine.ml  dune  machine.ml  prelude.ml  test_compile.ml
core/template_instantiate/: dune  machine.ml  test_ti.ml
evaluate/: dune  environment.ml  evaluator.ml  interactive.ml  test_eval.ml
frontend/: ast.ml  dune  lexer.mll  menhir_parser.mly  parser.ml
lib/: ast.ml  dune  entry.ml  environment.ml  evaluator.ml  lexer.mll  menhir_parser.mly  parser.ml  type_check.ml  type_environment.ml  type_inference.ml
test/: dune  test_wyah.ml
typecheck/: dune  pretty_print_type.ml  type_inference.ml
